--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -26,6 +26,12 @@ _Version_ *{page-component-display-version}*
 .. link:{sectionPath}/tutorial-dotnetcore.html[Aplicación Web DotNet Core con Base de datos SQL en Azure]
 // .. link:{sectionPath}/tutorial-dotnetcore.html[Aplicación Web ASP.NET con Base de datos SQL en Azure]
 
++
+[start=2]
+:section: tutorial-node-mongo
+:sectionPath: modules/{section}/pages
+.. link:{sectionPath}/tutorial-node-mongo.html[Aplicación web de Node.js y MongoDB en Azure]
+
 //. link:docs/selenium-webdriver.html[Selenium WebDriver]
 
 //. link:docs/selenium-jenkins.html[Selenium en Jenkins]
