--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -9,6 +9,9 @@ ifdef::env-github[]
 :imagesdir: ../images
 :figure-caption: Figura
 endif::[]
+// Refs:
+:section:
+:sectionPath:
 
 _Version_ *{page-component-display-version}*
 
@@ -22,15 +25,16 @@ _Version_ *{page-component-display-version}*
 +
 :section: tutorial-dotnetcore-sql
 :sectionPath: modules/{section}/pages
-[loweralpha]
 .. link:{sectionPath}/tutorial-dotnetcore.html[Aplicación Web DotNet Core con Base de datos SQL en Azure]
-+
+
 [start=2]
+[loweralpha]
 :section: tutorial-aspnet-sql
 :sectionPath: modules/{section}/pages
-[loweralpha]
-.. link:{sectionPath}/tutorial-aspnet.html[Aplicación Web ASP.NET con Base de datos SQL en Azure]
+. link:{sectionPath}/tutorial-aspnet.html[Aplicación Web ASP.NET con Base de datos SQL en Azure]
+[start=3]
 .. Aplicación Web PHP con MySQL en Azure
+
 +
 [start=4]
 :section: tutorial-node-mongo
