--- a/docs/modules/ROOT/pages/selenium-webdriver.adoc
+++ b/docs/modules/ROOT/pages/selenium-webdriver.adoc
@@ -261,7 +261,7 @@ image::selenium-ide-change-selector-xpath.png[role="thumb", align="center"]
 === Esperas
 En numerosas ocasiones cuando se le indica al navegador que navegue a una página y a continuación se intenta encontrar un elemento en esa página, se obtiene un error indicando que no existe tal elemento. Esto es debido al tiempo necesario para que se cargue el contenido de la página, que ha sido superior al tiempo esperado por Selenium para ejecutar la acción. Es por ello que se hace necesario añadir un tiempo de espera en medio de determinadas acciones para permitir que se cargue el contenido del formulario, la página, etc. Por ejemplo, antes del primer `sendKeys` que escribe un texto en un campo de formulario, y también antes y después de `click()` en un botón de formulario. 
 
-Selenium tiene varias estrategias de https://www.selenium.dev/documentation/es/webdriver/waits/[espera], principalmente esperas explícitas y esperas implícitas. Podemos añadir esperas explícitas de dos formas para que el código detenga la ejecución del programa, o congelar el hilo, hasta que la condición que le pases se resuelva: 
+Selenium tiene varias https://www.selenium.dev/documentation/webdriver/waits/[estrategias de espera,window=_blank], principalmente https://www.selenium.dev/documentation/webdriver/waits/#explicit-wait[esperas explícitas,window=_blank] y https://www.selenium.dev/documentation/webdriver/waits/#implicit-wait[esperas implícitas,window=_blank]. Podemos añadir esperas explícitas de dos formas para que el código detenga la ejecución del programa, o congelar el hilo, hasta que la condición que le pases se resuelva: 
 
 - añadiendo un tiempo fijo (no recomendado)
 
@@ -308,17 +308,11 @@ En caso de que siga sin funcionar, sustituye el método `visibilityOfElementLoca
 
 Otro método de espera es la espera implícita, que aparece en la documentación de Selenium y en los ejemplos, sin embargo no dan el resultado esperado. Por ejemplo el método https://www.selenium.dev/selenium/docs/api/java/org/openqa/selenium/WebDriver.Timeouts.html#implicitlyWait-long-java.util.concurrent.TimeUnit-[implicitlyWait]: 
 
-    driver.manage().timeouts().implicitlyWait(30, TimeUnit.SECONDS);
+    driver.manage().timeouts().implicitlyWait(Duration.ofSeconds(10));
 
-Se supone que establece la cantidad de tiempo que el driver debería esperar cuando busca un elemento si este no está presente inmediatamente. Sin embargo, no funciona como se espera si no se están usando las últimas versiones de las dependencias y de los navegadores, y los errores no se solucionan.
+Se supone que establece la cantidad de tiempo que el driver debería esperar cuando busca un elemento si este no está presente inmediatamente. Sin embargo, no funciona siempre como se espera si no se están usando las últimas versiones de las dependencias y de los navegadores, y los errores no se solucionan.
 
-Así que la forma más segura, aunque no la recomendada, es *añadir manualmente esperas explícitas* en cada paso que requiera tiempo de carga de los contenidos. Puesto que añadir un `sleep()` está desaconsejado, la mejor opción entonces es añadir comandos `waitForElementVisible` y su equivalente en Webdriver `wait.until(ExpectedConditions.elementToBeClickable...)`.
-
-
-[TIP]
-====
-Consulta en la sección FAQ el comando `waitForElementVisible`, una alternativa recomendada a añadir segundos de espera fijos con `Time.sleep()`
-====
+Así que la forma más segura es *añadir manualmente esperas explícitas* en cada paso que requiera tiempo de carga de los contenidos. Puesto que añadir un `sleep()` está desaconsejado, la mejor opción entonces es añadir comandos `waitForElementVisible` y su equivalente en Webdriver `wait.until(ExpectedConditions.elementToBeClickable...)`.
 
 
 === Otras comprobaciones
@@ -487,6 +481,8 @@ Es necesario revisar los procesos tanto en nuestra máquina local como en Jenkin
 
 == Más info
 
+- Actualización de Selenium 3 a https://www.selenium.dev/documentation/webdriver/getting_started/upgrade_to_selenium_4[Selenium 4]
+ 
 - Mas información sobre https://www.selenium.dev/documentation/webdriver/getting_started/upgrade_to_selenium_4/#maven[Maven con Selenium 4]. 
 
 - https://www.browserstack.com/guide/selenium-with-java-for-automated-test[Best Practices while writing Selenium tests with Java] (sección al final de la página) 
