--- a/docs/modules/tutorial-dotnetcore-sql/pages/tutorial-dotnetcore.adoc
+++ b/docs/modules/tutorial-dotnetcore-sql/pages/tutorial-dotnetcore.adoc
@@ -241,7 +241,7 @@ Debemos conectar la aplicación hospedada en App Service a nuestra base de datos
 az sql db show-connection-string \
     --client ado.net \
     --name coreDb \
-    ---server <your-server-name> <1>
+    --server <your-server-name> <1>
 ----
 <1> En mi caso, <<creacion_bdd, antes al servidor de bbdd>> le he dado el nombre `dotnetcore-tutorial-jjcanada`
 
@@ -272,7 +272,7 @@ Para generar el esquema de la base de datos, es preciso configurar una regla de 
 
 [source,Azure CLI]
 ----
-az sql server firewall-rule create -resource-group msdocs-core-sql --server <yoursqlserver> --name LocalAccess --start-ip-address <your-ip> --end-ip-address <your-ip>
+az sql server firewall-rule create --resource-group msdocs-core-sql --server <yoursqlserver> --name LocalAccess --start-ip-address <your-ip> --end-ip-address <your-ip>
 ----
 
 [start=2]
