--- a/docs/modules/tutorial-dotnetcore-sql/pages/tutorial-dotnetcore.adoc
+++ b/docs/modules/tutorial-dotnetcore-sql/pages/tutorial-dotnetcore.adoc
@@ -4,6 +4,15 @@
 :toc-title: Tabla de contenidos
 :doctype: book
 :icons: font
+
+////
+///  Copy button on code blocks
+////
+[.doc]
+
+:docinfo: shared-footer
+
+
 ////
 Nombre y título del trabajo
 ////
@@ -101,7 +110,7 @@ Por último, cree la aplicación web de App Service mediante el comando `az weba
 [source,Azure CLI]
 ----
 az webapp create \
-    --name msdocs-core-sql-2022-jjcanada \ <1>
+    --name msdocs-core-sql-2023-jjcanada \ <1>
     --runtime "DOTNET|6.0" \ <2>
     --plan msdocs-core-sql-plan-f1  \
     --resource-group msdocs-core-sql
@@ -186,7 +195,7 @@ Para desplegar (o implementar, es el término que utiliza la documentación ofic
 [source,Azure CLI]
 ----
 az webapp deployment source config-local-git \
-    --name msdocs-core-sql-2022-jjcanada \ <1>
+    --name msdocs-core-sql-2023-jjcanada \ <1>
     --resource-group msdocs-core-sql
 ----
 <1> Usa el mismo nombre de la instancia Web App que has usado al <<creacion_web_app, crearla anteriormente>> mediante el comando `az webapp create`.
@@ -197,7 +206,7 @@ az webapp deployment source config-local-git \
 [source,Azure CLI]
 ----
 az webapp deployment list-publishing-credentials \
-        --name msdocs-core-sql-2022-jjcanada \ <1>
+        --name msdocs-core-sql-2023-jjcanada \ <1>
         --resource-group msdocs-core-sql \
         --query "{Username:publishingUserName, Password:publishingPassword}"
 ----
@@ -208,7 +217,7 @@ El resultado debe ser algo así:
 [source,bash]
 ----
 "Password": "wqdZ3jqv6RasdfasdfasdfasdfasdfX0hGfBae4uEhoW",
-"Username": "$msdocs-core-sql-2022-jjcanada"
+"Username": "$msdocs-core-sql-2023-jjcanada"
 ----
 
 [start=3]
@@ -222,7 +231,7 @@ git remote add azure https://<your-app-name>.scm.azurewebsites.net/<your-app-nam
 Que en mi caso, sería tal que así: 
 [source,bash]
 ----
-git remote add azure https://msdocs-core-sql-2022-jjcanada.scm.azurewebsites.net/msdocs-core-sql-2022-jjcanada.git
+git remote add azure https://msdocs-core-sql-2023-jjcanada.scm.azurewebsites.net/msdocs-core-sql-2023-jjcanada.git
 ----
 
 [start=4]
@@ -378,14 +387,14 @@ El resultado debe ser algo así:
 
 [source,bash]
 ----
-$ nslookup msdocs-core-sql-2022-jjcanada.azurewebsites.net
+$ nslookup msdocs-core-sql-2023-jjcanada.azurewebsites.net
 Servidor:  254.red-80-58-61.staticip.rima-tde.net
 Address:  80.58.61.254
 
 Respuesta no autoritativa:
 Nombre:  waws-prod-blu-315-02a8.eastus.cloudapp.azure.com
 Address:  20.119.8.0 <1>
-Aliases:  msdocs-core-sql-plan-2022-jjcanada.azurewebsites.net
+Aliases:  msdocs-core-sql-plan-2023-jjcanada.azurewebsites.net
           waws-prod-blu-315.sip.azurewebsites.windows.net
 ----
 <1> IP que debes añadir en la regla para acceder a la BBDD.
